# smm_shelter

./: .gitignore  Makefile  README.md  compose.yaml  database.yml  dev.yml  docker-compose.yml  server.yml
admin_panel/: Dockerfile  Makefile  README.md  bot.py  main.py  pyproject.toml  requirements.txt
admin_panel/src/: bot.py  receiver.py  sender.py
admin_panel/src/admin/: __init__.py  admin.py  interface.py
admin_panel/src/developer/: __init__.py  interface.py
assets/: form-for-help.html  (+2 more)
backend/: .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/src/: app.py  settings.py
backend/src/api/: main_router.py  schemas.py
backend/src/api/schemas/: news.py  pets.py  reports.py  transactions.py
backend/src/database/: __init__.py  admin.py  core.py  engine.py  my_crud.py  scripts.py  settings.py
backend/src/database/custom_views/: __init__.py  backup.py  compress.py
backend/src/database/models/: __init__.py  base.py  gender.py  image.py  pet.py  petType.py  pets_models.py  status.py
backend/src/database/models/news/: news.py  newsImage.py
backend/src/database/security/: __init__.py  auth_backend.py
backend/src/migrations/: env.py
backend/src/pets_service/: router.py
backend/src/pets_service/images/: __init__.py  api.py  schemas.py  service.py
backend/src/pets_service/pets/: __init__.py  api.py  schemas.py  service.py
backend/src/pets_service/pets_type/: __init__.py  api.py  schemas.py  service.py
backend/src/security_module/: __init__.py  secret_schema.py  security.py
backend/src/templates/: backup.html  compress.html  custom_edit.html  message.html
frontend/: Dockerfile  Makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
frontend/content/static/: landing.js
frontend/content/templates/: landing.html
frontend/public/: hello.txt  index.html  robots.txt
frontend/src/: App.js  app.py  index.css  index.js  rounter.py  some.js
frontend/src/api/: api.jsx
frontend/src/components/ImageWithPlaceholder/: ImageWithPlaceholder.jsx
frontend/src/components/footer/: footer.jsx  style-footer.css
frontend/src/components/header/: header.jsx  style-header.css
frontend/src/pages/: contactsPage.jsx  formForHelp.jsx  mainPage.jsx  ourPets.jsx  style-contacts.css  style-formForHelp.css  style-mainPage.css  style-ourPets.css  style-takeHome.css  takeHome.jsx
frontend/src/pages/contacts/: contactsPage.jsx  style-contacts.css
frontend/src/pages/formForHelp/: formForHelp.jsx  style-formForHelp.css
frontend/src/pages/mainPage/: mainPage.jsx  style-mainPage.css
frontend/src/pages/notFound/: notFound.jsx  style-notFound.css
frontend/src/pages/ourPets/: API-request.js  ourPets.jsx  style-ourPets.css
frontend/src/pages/takeHome/: API-request.js  style-takeHome.css  takeHome.jsx
services/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
services/src/: app.py
services/src/api/v1/: router.py
services/src/auth_service/: api.py  schemas.py  settings.py
services/src/auth_service/database/: models.py  session.py
services/src/auth_service/service/: auth.py
services/src/calculator_service/: api.py  calculate.py  math_funcs.py  schemas.py
services/src/file_module/: file_worker.py
services/src/joke_service/: api.py  settings.py
services/src/joke_service/database/: models.py  session.py
services/src/joke_service/service/: joke.py
services/src/pets_service/: api.py  schemas.py  settings.py
services/src/pets_service/api/: article.py  card.py  files_api.py  pet_type.py  router.py
services/src/pets_service/database/: models.py  session.py
services/src/pets_service/service/: article.py  card.py  files.py  image.py  pet.py  pet_type.py
services/src/security_module/: __init__.py  jwt.py  passwords.py
services/tests/auth_service/: test_auth.py
(+44 files in other folders)
