[tool.poetry]
name = "admin-panel"
version = "0.1.0"
description = ""
authors = ["matv864 <matv864@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pyTelegramBotAPI = "^4.22.0"
aiohttp = "^3.10.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
