[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["matv864 <matv864@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
SQLAlchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
asyncpg = "^0.29.0"
PyJWT = "^2.8.0"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
pygeotile = "^1.0.6"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"