[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["matv864 <matv864@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.114.1"}
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
SQLAlchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
sqladmin = "^0.18.0"
fastapi-storages = "^0.3.0"
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
pillow = "^10.4.0"
logging = "^0.4.9.6"
alembic = "^1.13.2"
bcrypt = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"