[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matv864", email = "matv864@gmail.com" }
]
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
    "email-validator>=2.2.0",
    "asyncpg>=0.30.0",
    "sqladmin>=0.20.1",
    "fastapi-storages>=0.3.0",
    "python-dotenv>=1.0.1",
    "pillow>=11.1.0",
    "logging>=0.4.9.6",
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.8",
    "bcrypt>=4.2.1",
    "itsdangerous>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
