[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["matv864 <matv864@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
httpx = "^0.27.0"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
